--- a/triangle/templates/triangle/triangle.html
+++ b/triangle/templates/triangle/triangle.html
@@ -97,6 +97,8 @@
   </section>
   
   <footer>
+    Разработчик: Супоненко Маргарита
+    <p></p>
     &copy; 2025 Математический калькулятор
   </footer>
   
