--- a/triangle/templates/triangle/triangle.html
+++ b/triangle/templates/triangle/triangle.html
@@ -97,7 +97,7 @@
   </section>
   
   <footer>
-    Разработчик: Супоненко Маргарита
+    Разработчик: Супоненко Маргарита Алексеевна
     <p></p>
     &copy; 2025 Математический калькулятор
   </footer>
