--- a/triangle/templates/triangle/triangle.html
+++ b/triangle/templates/triangle/triangle.html
@@ -97,7 +97,8 @@
   </section>
   
   <footer>
-    Разработчик: Супоненко Маргарита Алексеевна
+    Разработчик: Супоненко Маргарита Алексеевна   
+    Разработано для ОПИ
     <p></p>
     &copy; 2025 Математический калькулятор
   </footer>
